--- a/components/styles.module.css
+++ b/components/styles.module.css
@@ -176,6 +176,7 @@
   background: #e5f2e8;
 }
 
+/*
 @media (max-width: 1360px) {
   .githubCorner {
     display: none;
@@ -185,6 +186,7 @@
 .githubCorner:hover .octoArm {
   animation: octocat-wave 560ms ease-in-out;
 }
+
 
 @keyframes octocat-wave {
   0%,
@@ -210,3 +212,4 @@
     animation: octocat-wave 560ms ease-in-out;
   }
 }
+*/
